Fix for overflowing profile photo thumbnails

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -663,7 +663,7 @@ img.layered {
   }
 
   .section-with-photo {
-    min-height: 56px;
+    min-height: 70px;
 
     .section-photo {
       position: absolute;
